fix: убрал json-server в devDependencies

--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "not dead"
   ],
   "devDependencies": {
-    "vite": "^4.2.1"
-  },
-  "dependencies": {
+    "vite": "^4.2.1",
     "json-server": "^0.17.3"
   }
 }
